--- a/assets/locale/locale_my.arb
+++ b/assets/locale/locale_my.arb
@@ -18,7 +18,7 @@
   "aWordOrTwo": "...စကားလုံး တစ်လုံး နှစ်လုံး",
 
   "locale": "ဘာသာစကား",
-  "switchTheme": "အပြင်အဆင်",
+  "themeMode": "အလင်းအမှောင်",
   "automatic": "အလိုအလျောက်",
   "dark": "အမှောင်",
   "light": "အလင်း",
