--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Fleth</string>
-  <string name="facebook_app_id">236302218316960</string>
-  <string name="fb_login_protocol_scheme">fb236302218316960</string>
+  <string name="app_name">MyOrdbok</string>
+  <string name="facebook_app_id">724916637523820</string>
+  <string name="fb_login_protocol_scheme">fb724916637523820</string>
 </resources>
